# PlazaEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  PlazaEngineProjectConfig.cmake  PlazaEngineProjectConfig.cmake.in  README.md
.cache/clangd/index/: AnimationComponent.cpp.4C1A4257EA5BF2C0.idx  AnimationComponent.h.280B54292D0022EC.idx  AnimationLoader.cpp.46646929C4ED15FA.idx  Any.h.57782A883638B61A.idx  Application.h.070AAA473B9D9932.idx  ApplicationSizes.h.0EDEABB8B0040657.idx  Asset.h.2B89E9828E5D379C.idx  AssetsImporter.h.02ED378C67F99C4E.idx  AssetsLoader.h.AFB7D829E9A5D35A.idx  AssetsManager.h.26047E8039F463A1.idx  AssetsReader.h.DC9D69803172385E.idx  AssetsSerializer.h.E6E460CE0D8280F1.idx  AssetsType.h.6EC16E2E2AC659AB.idx  Audio.h.EB4F0236D75CCBBA.idx  AudioListener.cpp.2ED1600AAF11F1D9.idx  AudioListener.h.8AB10C76F7CD703C.idx  AudioSource.h.6390CED9B6EBA79C.idx  AudioSourceLoader.cpp.9DE0312A665B49F2.idx  AudioSourceLoader.h.47F551F9E07B3339.idx  BpAABBManager.h.6ED96F0966FBD37C.idx  BpAABBManagerBase.h.D7C57DD74E9969C6.idx  BpAABBManagerTasks.h.96E1836C923C9F6C.idx  BpBroadPhase.h.4F15B7FF43638539.idx  BpBroadPhaseIntegerAABB.h.7425ABD3CD030672.idx  BpBroadPhaseSapAux.cpp.1153C648C4F9B64A.idx  BpBroadPhaseSapAux.h.25FCF3332AACDEE1.idx  BpBroadPhaseUpdate.h.4DD03B81C7451C67.idx  BpFiltering.h.9CD8AA0AD371072B.idx  BpVolumeData.h.5AC4DC79F6EC1481.idx  Buffer.h.7C827EEB31908ACB.idx  Cache.cpp.DBC881DA2018138B.idx  Cache.h.3CC14D4A38FA641B.idx  CallbacksHeader.h.39CA26D70AF6555E.idx  Camera.h.7DE9CE6AB20A6CAE.idx  CctCharacterController.h.91638230118E1634.idx  CctCharacterControllerCallbacks.cpp.E92DC429996C9605.idx  CctCharacterControllerManager.h.6C763026F50A6EEA.idx  CctController.h.F513165E1840FC23.idx  CctInternalStructs.h.D8C3CE871427DC2E.idx  CctObstacleContext.h.D62C6CCC199C3283.idx  (+1700 more)
.github/workflows/: cmake-single-platform.yml
Editor/: CopyPasteManager.cpp  CopyPasteManager.h  Editor.h  FileWatcher.cpp  Filewatcher.h  Project.cpp  Project.h  UndoManager.h  defaultScript.cs  premakeDefaultProject.lua
Editor/DefaultAssets/: DefaultAssets.h
Editor/DefaultAssets/Models/: DefaultModels.cpp  DefaultModels.h
Editor/DefaultAssets/NewProject/: .gitignore  CMakeLists.txt  CMakePresets.json
Editor/DragDrop/: DragDrop.h  DropFileScene.cpp  DropFileScene.h
Editor/EditorTools/: EditorTool.h  TerrainEditorTool.cpp  TerrainEditorTool.h
Editor/GUI/: EditorInspector.cpp  EditorInspector.h  FpsCounter.h  GuiWindow.h  Inspector.cpp  Inspector.h  MenuBar.cpp  MenuBar.h  TransformOverlay.cpp  TransformOverlay.h  gizmo.cpp  gizmo.h  guiMain.cpp  guiMain.h
Editor/GUI/AssetsImporterWindow/: AssetsImporterWindow.cpp  AssetsImporterWindow.h
Editor/GUI/Console/: Console.cpp  Console.h
Editor/GUI/ContextWindows/: SearchContext.cpp  SearchContext.h
Editor/GUI/FileExplorer/: CreateFile.h  CreateFolder.h  File.cpp  File.h  FileExplorer.cpp  FileExplorer.h  FileIcon.cpp  FileIcon.h  RenamedFile.cpp  RenamedFile.h
Editor/GUI/Hierarchy/: DragDrop.cpp  Hierarchy.cpp  Hierarchy.h  HierarchyPopup.cpp  HierarchyPopup.h
Editor/GUI/NodeEditors/: MathNodes.cpp  NodeEditor.cpp  NodeEditor.h  RenderGraphEditor.cpp  RenderGraphEditor.h
Editor/GUI/Popups/: FileExplorerFilePopup.cpp  FileExplorerFilePopup.h  FileExplorerPopup.cpp  FileExplorerPopup.h  NewEntityPopup.cpp  NewEntityPopup.h  Popup.h
Editor/GUI/ProjectManager/: NewProjectClick.cpp  OpenProjectClick.cpp  ProjectItem.cpp  ProjectItem.h  ProjectManager.cpp  ProjectManager.h
Editor/GUI/Style/: EditorStyle.h
Editor/GUI/Utils/: DataVisualizer.h  Filesystem.h  ImageLoader.h  Utils.h
Editor/ScriptManager/: NewCsScript.cpp  ScriptManager.h  ScriptReloadAssembly.cpp
Editor/SessionCache/: Cache.cpp  Cache.h
Editor/Settings/: EditorSettings.cpp  EditorSettings.h  ProjectGenerator.cpp  ProjectGenerator.h  SettingsSerializer.cpp  SettingsSerializer.h
Engine/: imgui.ini  stb_image.h
Engine/Application/: Application.cpp  Application.h  ApplicationSizes.h  EditorCamera.cpp  EditorCamera.h  EngineSettings.h  EntryPoint.cpp  Window.cpp  Window.h
Engine/Application/Callbacks/: CallbacksHeader.h  DropCallback.cpp  FramebufferSizeCallback.cpp  KeyCallback.cpp  KeyboardCallback.cpp  MouseButtonCallback.cpp  MouseCallback.cpp  ScrollCallback.cpp
Engine/Application/FileDialog/: FileDialog.h  OpenDialog.cpp  OpenFolderDialog.cpp  SaveDialog.cpp
Engine/Components/: Component.cpp  Component.h
Engine/Components/Audio/: AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h
Engine/Components/Core/: Camera.cpp  Camera.h  CoreComponents.h  Entity.cpp  Entity.h  Prefab.cpp  Prefab.h  Transform.cpp  Transform.h
Engine/Components/Physics/: CharacterController.h  Collider.cpp  Collider.h  PhysicsMaterial.h  RigidBody.cpp  RigidBody.h
Engine/Components/Rendering/: AnimationComponent.cpp  AnimationComponent.h  Light.cpp  Light.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h
Engine/Components/Scripting/: CppScriptComponent.cpp  CppScriptComponent.h  LuaScriptComponent.h
Engine/Core/: Any.h  ComponentMapStructure.cpp  ComponentMapStructure.h  Engine.cpp  Engine.h  EnumReflection.h  FilesManager.cpp  FrameBuffer.cpp  FrameBuffer.h  Physics.cpp  Physics.h  PreCompiledHeaders.cpp  PreCompiledHeaders.h  RenderGroup.cpp  RenderGroup.h  Scene.cpp  Scene.h  Script.h  Standards.cpp  Standards.h  Time.cpp  Time.h  UUID.cpp  UUID.h
Engine/Core/AssetsManager/: Asset.h  AssetsManager.cpp  (+4 more)
Engine/ECS/: ColliderSystem.cpp  ComponentPool.cpp  ComponentPool.h  ECSManager.cpp  ECSManager.h  EntitySystem.cpp  RigidBodySystem.cpp  TransformSystem.cpp
Engine/Editor/: Editor.cpp  Editor.h
Engine/Shaders/: 1.model_loadingFragment.glsl  1.model_loadingVertex.glsl  objectPickingFragment.glsl  vulkanTriangle.frag  vulkanTriangle.vert
Engine/Threads/: ThreadManager.cpp  ThreadManager.h  Threads.cpp  Threads.h
Engine/Utils/: binaryUtils.h  fileUtils.h  glmUtils.h  vectorUtils.h
cmake/: toolchain-Linux.cmake  toolchain-Windows.cmake
(+215 files in other folders)
